@@ -2419,49 +2419,13 @@ block|}
 block|}
 else|else
 block|{
-name|File
-name|incFile
-init|=
-operator|new
-name|File
+name|settingsURL
+operator|=
+name|urlFromFileAttribute
 argument_list|(
 name|propFilePath
 argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|incFile
-operator|.
-name|isAbsolute
-argument_list|()
-condition|)
-block|{
-name|settingsURL
-operator|=
-name|incFile
-operator|.
-name|toURI
-argument_list|()
-operator|.
-name|toURL
-argument_list|()
 expr_stmt|;
-block|}
-else|else
-block|{
-name|settingsURL
-operator|=
-operator|new
-name|URL
-argument_list|(
-name|this
-operator|.
-name|settings
-argument_list|,
-name|propFilePath
-argument_list|)
-expr_stmt|;
-block|}
 name|Message
 operator|.
 name|verbose
@@ -2475,9 +2439,15 @@ name|ivy
 operator|.
 name|setSettingsVariables
 argument_list|(
-name|incFile
+operator|new
+name|File
+argument_list|(
+name|propFilePath
+argument_list|)
 argument_list|)
 expr_stmt|;
+comment|//We can not use the setSettingsVariables(URL) because that would put different
+comment|//values for the properties.  I'm not sure what would be the regression...
 block|}
 operator|new
 name|XmlSettingsParser
@@ -2504,6 +2474,59 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+comment|/** Provide an URL referencing the given filepath.  If filePath is an absolute path, then      * the resulting URL point to a local file, otherwise, the filepath is evaluated relatively      * to the URL of the current settings file (can be local file or remote URL).      */
+specifier|private
+name|URL
+name|urlFromFileAttribute
+parameter_list|(
+name|String
+name|filePath
+parameter_list|)
+throws|throws
+name|MalformedURLException
+block|{
+name|File
+name|incFile
+init|=
+operator|new
+name|File
+argument_list|(
+name|filePath
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|incFile
+operator|.
+name|isAbsolute
+argument_list|()
+condition|)
+block|{
+return|return
+name|incFile
+operator|.
+name|toURI
+argument_list|()
+operator|.
+name|toURL
+argument_list|()
+return|;
+block|}
+else|else
+block|{
+return|return
+operator|new
+name|URL
+argument_list|(
+name|this
+operator|.
+name|settings
+argument_list|,
+name|filePath
+argument_list|)
+return|;
+block|}
+block|}
 specifier|private
 name|void
 name|propertiesStarted
@@ -2511,6 +2534,8 @@ parameter_list|(
 name|Map
 name|attributes
 parameter_list|)
+throws|throws
+name|IOException
 block|{
 name|String
 name|propFilePath
@@ -2546,7 +2571,7 @@ literal|null
 condition|)
 block|{
 name|String
-name|override
+name|overrideStr
 init|=
 operator|(
 name|String
@@ -2558,8 +2583,25 @@ argument_list|(
 literal|"override"
 argument_list|)
 decl_stmt|;
-try|try
-block|{
+name|boolean
+name|override
+init|=
+name|overrideStr
+operator|==
+literal|null
+condition|?
+literal|true
+else|:
+name|Boolean
+operator|.
+name|valueOf
+argument_list|(
+name|overrideStr
+argument_list|)
+operator|.
+name|booleanValue
+argument_list|()
+decl_stmt|;
 name|Message
 operator|.
 name|verbose
@@ -2569,106 +2611,23 @@ operator|+
 name|propFilePath
 argument_list|)
 expr_stmt|;
-name|ivy
-operator|.
-name|loadProperties
-argument_list|(
-operator|new
-name|File
-argument_list|(
-name|propFilePath
-argument_list|)
-argument_list|,
-name|override
-operator|==
-literal|null
-condition|?
-literal|true
-else|:
-name|Boolean
-operator|.
-name|valueOf
-argument_list|(
-name|override
-argument_list|)
-operator|.
-name|booleanValue
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|fileEx
-parameter_list|)
-block|{
-name|Message
-operator|.
-name|verbose
-argument_list|(
-literal|"failed to load properties as file: trying as url: "
-operator|+
-name|propFilePath
-argument_list|)
-expr_stmt|;
-try|try
-block|{
-name|ivy
-operator|.
-name|loadProperties
-argument_list|(
-operator|new
 name|URL
+name|fileUrl
+init|=
+name|urlFromFileAttribute
 argument_list|(
 name|propFilePath
 argument_list|)
+decl_stmt|;
+name|ivy
+operator|.
+name|loadProperties
+argument_list|(
+name|fileUrl
 argument_list|,
 name|override
-operator|==
-literal|null
-condition|?
-literal|true
-else|:
-name|Boolean
-operator|.
-name|valueOf
-argument_list|(
-name|override
-argument_list|)
-operator|.
-name|booleanValue
-argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|urlEx
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|IllegalArgumentException
-argument_list|(
-literal|"unable to load properties from "
-operator|+
-name|propFilePath
-operator|+
-literal|". Tried both as an url and a file, with no success. "
-operator|+
-literal|"File exception: "
-operator|+
-name|fileEx
-operator|+
-literal|". URL exception: "
-operator|+
-name|urlEx
-argument_list|)
-throw|;
-block|}
-block|}
 block|}
 if|else if
 condition|(
